2011-01-07 Malignant Manor <malignantmanor@users.sourceforge.net>
	* istring.h, imagewin/manip.h: Applied modified patch 3152619
		that allows Clang (LLVM) to compile.

2011-01-07 Malignant Manor <malignantmanor@users.sourceforge.net>
	* audio\midi_drivers\XMidiFile.*: Uncommented VolumeCurve, chorus,
		and reverb. Chorus and reverb still don't seem to work.

2011-01-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Fixed crash caused by having a NULL pointer as the
		object of as_actor(). Fixes bug 3150216 (introduced 6615)

2011-01-04 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actorio.cc, actors.*: Fixed broken schedule location write.
		Schedule z coord is now saved. Fixed npcs changing schedules
		when the schedule hasn't changed. Existing saved games need
		to be saved again after a time change for this to work on
		reload. New games should work right away.

2011-01-03 Malignant Manor <malignantmanor@users.sourceforge.net>
	* imagewin/imagewin.cc: Fix 8 bit video checks in static_init
	* actors.cc: Made the Avatar immune to charm in normal charm
		difficulty. The original allowed the Avatar to be charmed. It
		only showed the highlight and status icon. It wasn't harmful.

2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/objs.cc: Fix triple crossbow bolt quantity frames offset
		being wrong making it seem to disappear. Bug 3053282

2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /objs/eggs.cc: Fix SS stairs so they autoreset. Bug 3115182
	* /mapedit/studio.cc: Fix typo that messed up -p command line.

2010-12-28 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /mapedit/exult_studio.glade: Fix swapped neutral and friendly
		alignment display in monster eggs and monster info.

2010-12-27 Malignant Manor <malignantmanor@users.sourceforge.net>
	*/objs/jawbone.cc: Revert same tooth restriction since Marzo
		plans to do something different.
